[package]
name = "gheartbeat-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
a2s = "0.5"
rglua = "3.0.0-beta2"
sysinfo = { version = "0.30", default-features = false }
thiserror = "1.0"
local-ip-address = "0.6.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
